# chipengine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.frontend  PROJECT_PLAN.md  PROJECT_ROADMAP.md  README.md  ROADMAP.md  WORKFLOW_ANALYSIS.md  alembic.ini  docker-compose.override.yml.example  docker-compose.yml  load_test_results.jsonl  pyproject.toml  quick_bot_test.py  railway.json  render.yaml  start_bot_api.py  test_chipengine.html
alembic/: env.py
docs/: bot_api_examples.md  deployment.md
docs/api/: README.md  bot-api.md  game-api.md  stats-api.md  tournament-api.md  websocket-api.md
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: GameSelection.tsx  LandingPage.tsx  StressTest.tsx  TournamentBracket.tsx  TournamentList.tsx
frontend/src/games/rps/: RockPaperScissors.tsx
frontend/src/types/: game.ts
scripts/: deploy.sh  healthcheck.py
src/chipengine/: __init__.py
src/chipengine/api/: __init__.py  app.py  auth.py  database.py  game_manager.py  models.py  optimized_server.py  rate_limiting.py  stress_test_manager.py  websockets.py
src/chipengine/api/routes/: __init__.py  bot_games.py  bots.py  games.py  stats.py  stress_tests.py  tournaments.py
src/chipengine/core/: __init__.py  base_game.py  history.py  tournament.py
src/chipengine/database/: README.md  __init__.py  example_usage.py  init_db.py  models.py  session.py
src/chipengine/games/: __init__.py  rps.py  rps_optimized.py
tests/: load_test.py  load_test_optimized.py  profile_game.py  test_bot_api.py  test_rps_game.py
